--- a/sesion02/package.json
+++ b/sesion02/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "browser-sync src -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
