--- a/sesion03/package.json
+++ b/sesion03/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "browser-sync src -w",
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.26.7"
+    "browser-sync": "^2.26.7",
+    "parcel-bundler": "^1.12.4"
   }
 }
