--- a/sesion15/auth-graph-api/package.json
+++ b/sesion15/auth-graph-api/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource": "^0.7.0",
     "apollo-server": "^2.11.0",
     "dotenv": "^8.2.0",
-    "graphql": "^14.6.0"
+    "graphql": "^14.6.0",
+    "sequelize": "^5.21.5",
+    "sqlite3": "^4.1.1"
   }
 }
