--- a/sesion15/user-graph-api/package.json
+++ b/sesion15/user-graph-api/package.json
@@ -2,7 +2,7 @@
   "name": "user-graph-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
