--- a/sesion16/auth-graphql-api/package.json
+++ b/sesion16/auth-graphql-api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "babel src -d dist && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,10 @@
   "dependencies": {
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0"
   }
 }
