--- a/sesion16/auth-graphql-api/package.json
+++ b/sesion16/auth-graphql-api/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
   },
