[add] AuthAPI logic

--- a/sesion16/auth-graphql-api/package.json
+++ b/sesion16/auth-graphql-api/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource": "^0.7.0",
+    "apollo-server": "^2.11.0",
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
