[add] user signin and signup

--- a/sesion16/auth-graphql-api/package.json
+++ b/sesion16/auth-graphql-api/package.json
@@ -15,6 +15,8 @@
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "sequelize": "^5.21.6",
+    "sqlite3": "^4.1.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
   },
