[update] start command to include babel copy files

--- a/sesion17/graphql-protected-method/package.json
+++ b/sesion17/graphql-protected-method/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel src -d dist && node dist/index.js"
+    "start": "babel src -d dist --copy-files && node dist/index.js"
   },
   "keywords": [],
   "author": "",
