--- a/sesion17/graphql-protected-method/package.json
+++ b/sesion17/graphql-protected-method/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel src -d dist --copy-files && node dist/index.js"
+    "build": "babel src -d dist --copy-files",
+    "start": "NODE_ENV=development nodemon src/index.js --exec babel-node"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,8 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0"
+    "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.9.0",
+    "nodemon": "^2.0.3"
   }
 }
