--- a/sesion19/express-rest-api/package.json
+++ b/sesion19/express-rest-api/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "sequelize": "^5.21.7",
+    "sqlite3": "^4.2.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
   },
