--- a/sesion19/express-rest-api/package.json
+++ b/sesion19/express-rest-api/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "sequelize": "^5.21.7",
     "sqlite3": "^4.2.0",
     "winston": "^3.2.1",
